Fix cart wrap

--- a/src/components/pages/cart/Cart.module.sass
+++ b/src/components/pages/cart/Cart.module.sass
@@ -26,6 +26,7 @@
   display: flex
   flex-direction: row
   gap: 8px
+  flex-wrap: wrap
   > section:nth-child(1) > img
     height: 128px
     width: 128px
